--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@ body {
     min-width: 100%;
     font-family: 'Inter', sans-serif;
     background-color: #000000;  
+    color: #FFFFFF;
 }
 p {
     font-weight: 400;
@@ -12,13 +13,14 @@ p {
     font-size: 20px;
     line-height: 26px;
     letter-spacing: -0.03em;
-    color: #FFFFFF; 
 }
 h1 {
-    font-size: 80px;
-    line-height: 70px;
-    letter-spacing: -0.03em;
-    color: #1BFF07;
+    font-weight: 700;
+    font-size: 150px;
+    line-height: 133px;
+    text-align: center;
+    letter-spacing: -0.07em;
+    color: #FF25C2;
 }
 h2 {
     font-style: normal;
@@ -38,24 +40,6 @@ h3 {
     margin: 0 auto;
     min-width: 1150px;
 }
-.logo {
-    display: inline-block;
-    font-weight: 700;
-    font-size: 42px;
-    line-height: 32px;
-    letter-spacing: -0.10em;
-    text-decoration: none;
-    color: #1BFF07;
-    background-color: #000;
-    border-radius: 100px;
-    position: absolute;
-    top: 36px;
-    padding-top: 3px;
-    padding-right: 18px;
-    padding-left: 9px;
-    padding-bottom: 3px;
-    left: -2px;
-}
 .menu {
     display: inline-block;
     position: absolute;
@@ -64,10 +48,10 @@ h3 {
 }
 .menu li{
     font-size: 18px;
-    line-height: 23px;
+    line-height: 22px;
     letter-spacing: -0.03em;
     display: inline-block;
-    margin-left: 41px;
+    text-transform: uppercase;
 }
 .menu a{
     color: #FFFFFF;
