--- a/styles/style.css
+++ b/styles/style.css
@@ -17,10 +17,11 @@ p {
 h1 {
     font-weight: 700;
     font-size: 150px;
-    line-height: 133px;
+    line-height: 150px;
     text-align: center;
     letter-spacing: -0.07em;
     color: #FF25C2;
+    margin-left: -8px;
 }
 h2 {
     font-style: normal;
@@ -35,7 +36,6 @@ h3 {
     letter-spacing: -0.03em;
 }
 .header {
-    
     width: 1150px;
     margin: 0 auto;
     min-width: 1150px;
@@ -45,7 +45,7 @@ h3 {
     margin: 44px 0px 60px 0px;
 }
 .menu li{
-    margin-right: 44px;
+    margin: 0px 22px 0px 20px;
     font-size: 18px;
     line-height: 22px;
     letter-spacing: -0.03em;
@@ -62,6 +62,21 @@ h3 {
 .menu a:active {
     color: #FF25C2;
 }  
+.first-screen p{
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 30px;
+    text-align: center;
+    letter-spacing: -0.03em;
+    color: #FFFFFF;
+    width: 430px;
+    height: 103px;
+    margin: 0 auto;
+}
+
+
+
+
 
 .projects {
     width: 1150px;
