--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,7 @@ h1 {
     letter-spacing: -0.07em;
     color: #FF25C2;
     margin-left: -8px;
+    margin-bottom: 35px;
 }
 h2 {
     font-style: normal;
