--- a/styles/style.css
+++ b/styles/style.css
@@ -26,11 +26,10 @@ h1 {
 }
 h2 {
     font-style: normal;
-    font-weight: 400;
-    font-size: 55px;
+    font-weight: 700;
+    font-size: 60px;
     line-height: 72px;
-    letter-spacing: -0.03em;
-    color: #FFFFFF;
+    letter-spacing: -0.05em;
 }
 h3 {
     font-size: 30px;
@@ -63,13 +62,13 @@ h3 {
 .menu a:active {
     color: #FF25C2;
 }  
+.first-screen{
+    margin-bottom: 70px;
+}
 .first-screen p{
-    font-weight: 400;
     font-size: 25px;
     line-height: 30px;
     text-align: center;
-    letter-spacing: -0.03em;
-    color: #FFFFFF;
     width: 430px;
     height: 103px;
     margin: 0 auto;
@@ -78,53 +77,46 @@ h3 {
     background-image: url(../images/first-screen.png);
     width: 819px;
     height: 840px;
+    margin: -34px auto 0px auto;
 }
 
 
 
 
-.projects {
+.models {
     width: 1150px;
     margin: 0 auto 150px auto;
 }
-.projects h2 {
-    margin-bottom: 40px;
-    margin-left: -5px;
-}
-.project-item {
+.model-item {
     width: 1150px;
-    height: 550px;
+    height: 644px;
     position: relative;
-}
-.project-item a {
-    color: #ffffff;
-    text-decoration: none;
-}
-.project-item a:hover {
-    color: #1BFF07;
-}
-.project-item img {
-    border-radius: 30px;
-}
-.project-item h3{    
-    line-height: 46px;
-    font-size: 35px;
-    color: #FFFFFF;  
-    margin-bottom: 5px; 
-    position: absolute;
-    top: 410px;
-    left: 50px;
-}
-.project-item p {
-    font-size: 30px;
-    line-height: 39px;
-    position: absolute;
-    bottom: 50px;
-    left: 50px;
-}
-.project-item:nth-child(4) {
     margin-bottom: 80px;
 }
+.model-item h2 {
+    left: 50px;
+    top: 50px;
+    width: 375px;
+    height: 112px;
+}
+.model-item a {
+    text-decoration: none;
+    color: #ffffff;
+    border: 1px solid #FFFFFF;
+    border-radius: 100px;
+}
+.model-item a:hover {
+    color: #FF25C2;
+}
+.model-item img {
+    border-radius: 30px;
+}
+.model-item:nth-child(1) {
+    margin-bottom: 0px;
+}
+
+
+
 .see-all-projects {
     width: 582px;
     height: 153px;
