--- a/styles/style.css
+++ b/styles/style.css
@@ -201,17 +201,56 @@ h3 {
 
 
 
-.services{
+.clear-voice{
     width: 1150px;
     margin: 0 auto 150px auto;
 }
-.services h2{
+.clear-voice h2{
+    font-weight: 700;
+    font-size: 100px;
+    line-height: 73.52%;
+    text-align: center;
+    letter-spacing: -0.06em;
     color: #FFFFFF;
-    margin-bottom: 74px;
-    font-size: 35px;
-    line-height: 46px;
-    width: 400px;
+    padding-top: 130px 0px 40px 0px;
+    
 }
+.clear-voice p{
+    font-size: 45px;
+    line-height: 90%;
+    text-align: center;
+    width: 942px;
+    padding-bottom: 60px;
+}
+
+.clear-voice a {
+    text-decoration: none;
+    color: #ffffff;
+    border: 1px solid #FFFFFF;
+    border-radius: 100px;
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    font-size: 25px;
+    line-height: 109px;
+    text-align: center;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    box-sizing: border-box;
+    width: 420px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 .service-item {
     width: 1150px;
     margin-bottom: 74px;
