--- a/styles/style.css
+++ b/styles/style.css
@@ -131,7 +131,7 @@ h3 {
 .functions {
     min-width: 1150px;
     height: 786px;
-    margin: 0 auto 150px auto;
+    margin: 0 auto;
     background-image: url(../images/two-heads.png);
     background-repeat: no-repeat;
     position: relative;
@@ -171,7 +171,7 @@ h3 {
 
 .trainings {
     width: 1150px;
-    margin: 0 auto 150px auto;
+    margin: 150px auto;
 }
 .trainings h2{
     padding-bottom: 80px;
@@ -185,7 +185,7 @@ h3 {
     margin: 0 auto;
 }
 .trainings img{
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     display: block;
     margin: 0 auto;
 }    
