--- a/styles/style.css
+++ b/styles/style.css
@@ -160,15 +160,6 @@ h3 {
     padding-bottom: 39px;
     margin: 0px auto;
 }
-
-
-
-
-
-
-
-
-
 .trainings {
     width: 1150px;
     margin: 150px auto;
@@ -202,8 +193,13 @@ h3 {
 
 
 .clear-voice{
-    width: 1150px;
-    margin: 0 auto 150px auto;
+    background-image: url(..//images/clear-voice.png);
+    min-width: 1150px;
+    height: 1040px;
+    margin: 0 auto;
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: cover;
 }
 .clear-voice h2{
     font-weight: 700;
