--- a/styles/style.css
+++ b/styles/style.css
@@ -188,6 +188,9 @@ h3 {
     padding-bottom: 80px;
     margin: 0 auto;
 }
+.trainings p:nth-child(1) {
+    padding-bottom: 0px;
+}
 
 
 
@@ -220,9 +223,7 @@ h3 {
     padding-bottom: 60px;
     margin: 0 auto;
 }
-.clear-voice p:nth-child(2) {
-    padding-bottom: 0px;
-}
+
 .clear-voice a {
     text-decoration: none;
     color: #ffffff;
