--- a/styles/style.css
+++ b/styles/style.css
@@ -258,10 +258,11 @@ h3 {
     padding-bottom: 100px;
     margin-left: -32px;
 }
-.clear-sound img {
+.clear-sound-inner {
     width: 1150px;
     height: 450px;
     border-radius: 30px;
+    background-image: url(../images/clear-sound.png);
 }
 
 
@@ -297,11 +298,6 @@ h3 {
     min-width: 1150px;
     height: 717px;
     margin: 0 auto 150px auto;
-    background: #191C19;
-    background-image: url(../images/programmer.png);
-    background-repeat: no-repeat;
-    background-position-x: right;
-    border-radius: 30px;
     position: relative;
 }
 .contacts-inner {
@@ -339,7 +335,6 @@ h3 {
 }  
 .footer {
     margin: 0 auto;
-    background-color: #FFFFFF;
     border-radius: 30px 30px 0px 0px;
     position: relative;
     height: 222px;
@@ -352,7 +347,6 @@ h3 {
     font-size: 22px;
     line-height: 30px;
     letter-spacing: -0.03em;
-    color: #000000;
     position: absolute;
     top: 76px;
 }
@@ -360,7 +354,6 @@ h3 {
     font-size: 20px;
     line-height: 27px;
     letter-spacing: -0.03em;
-    color: #000000;
     opacity: 0.5;
     position: absolute;
     top: 172px;
