--- a/styles/style.css
+++ b/styles/style.css
@@ -263,15 +263,54 @@ h3 {
     height: 450px;
     border-radius: 30px;
     background-image: url(../images/clear-sound.png);
-    margin-bottom: 110px;
+    position: relative;
 }
 .clear-sound-inner p{
-    margin: 0 auto;
     width: 475px;
     height: 60px;
     position: absolute;
     bottom: 50px;
+    text-align: center;
+    left: 317px;
 }
+
+
+.contacts {
+    min-width: 1150px;
+    margin: 60px auto 200px auto;
+    
+}
+.contacts-inner {
+    width: 1150px;
+    margin: 0 auto;
+}
+ 
+.contacts ul {
+    
+} 
+.contacts ul li {
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 73.52%;
+    text-align: center;
+    letter-spacing: -0.06em;
+} 
+.contacts a {
+    color: #FFFFFF;
+    text-decoration: none;
+} 
+.contacts a:hover {
+    color: #FF25C2;
+}  
+.contacts a:active {
+    color: #FF25C2;
+}  
+
+
+
+
+
+
 
 
 
@@ -301,45 +340,7 @@ h3 {
     margin-top: 137px;
     margin-bottom: 0px;
 }
-.contacts {
-    min-width: 1150px;
-    height: 717px;
-    margin: 0 auto 150px auto;
-    position: relative;
-}
-.contacts-inner {
-    width: 1150px;
-    margin: 0 auto;
-}
-.contacts h2{
-    margin-bottom: 30px;
-    font-size: 35px;
-    line-height: 60px;
-    letter-spacing: -0.03em;
-    color: #FFFFFF;
-    position: absolute;
-    top: 320px;
-}  
-.contacts ul {
-    position: absolute;
-    bottom:89px;
-} 
-.contacts ul li {
-    padding-top: 20px;
-} 
-.contacts a {
-    font-size: 60px;
-    line-height: 60px;
-    letter-spacing: -0.03em;
-    color: #FFFFFF;
-    text-decoration: none;
-} 
-.contacts a:hover {
-    color: #1BFF07;
-}  
-.contacts a:active {
-    color: #1BFF07;
-}  
+
 .footer {
     margin: 0 auto;
     border-radius: 30px 30px 0px 0px;
