--- a/styles/style.css
+++ b/styles/style.css
@@ -279,23 +279,26 @@ h2 {
 .contacts {
     min-width: 1150px;
     margin: 60px auto 200px auto;
-    
 }
 .contacts-inner {
     width: 1150px;
     margin: 0 auto;
+    position: relative;
 }
  
 .contacts ul {
-    
+    text-align: center;
+    position: absolute;
+    left: 89px;
 } 
 .contacts ul li {
     font-weight: 700;
     font-size: 60px;
     line-height: 73.52%;
-    text-align: center;
-    letter-spacing: -0.06em;
     display: inline-block;
+    letter-spacing: -0.06em;
+    padding-right: 25px;
+    width: 211px;
 } 
 .contacts a {
     color: #FFFFFF;
@@ -339,34 +342,10 @@ h2 {
 
 
 
-
-
-.service-item-back {
-    width: 1150px;
-    height: 283px;
-    background: #191C19;
-    border-radius: 30px;
-    position: relative;
-}
-
-.service-item p{
-    font-size: 22px;
-    line-height: 29px;
-    position: absolute;
-    bottom: 40px;
-    left: 40px;
-    width: 749px;
-}
-
-.service-item:nth-last-child(1) {
-    margin-top: 137px;
-    margin-bottom: 0px;
-}
-
 .footer {
     margin: 0 auto;
     border-radius: 30px 30px 0px 0px;
-    position: relative;
+    
     height: 222px;
 }
 .footer-inner{
@@ -377,7 +356,7 @@ h2 {
     font-size: 22px;
     line-height: 30px;
     letter-spacing: -0.03em;
-    position: absolute;
+    
     top: 76px;
 }
 .copyright {
@@ -385,6 +364,5 @@ h2 {
     line-height: 27px;
     letter-spacing: -0.03em;
     opacity: 0.5;
-    position: absolute;
-    top: 172px;
+    
 }
