--- a/styles/style.css
+++ b/styles/style.css
@@ -314,14 +314,13 @@ h2 {
 
 
 .footer {
-    margin: 0 auto;
-}
-.footer-inner{
     width: 1150px;
     margin: 0 auto;
+    min-width: 1150px;
+    text-align: center;
 }
 .footer-menu{
-    padding: 44px 0px 60px 0px;
+    margin: 44px 0px 60px 0px;
 }
 .footer-menu li{
     margin: 0px 22px 0px 20px;
